# pixel-planet-101

./: .dockerignore  ACTIVITY_AGENT_README.md  AGENT_SETUP.md  CHECKLIST.md  DEPLOYMENT.md  DNN_PIPELINE_ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MULTI_MODEL_PIPELINE.md  MULTI_PARAMETER_SETUP.md  PIPELINE_EXECUTION_GUIDE.md  QUICK_SETUP.md  README.md  api_service.py  call_api_example.py  demo_agent_with_charts.py  deploy.sh  forecast_all_parameters.sh  mt_apo_hiking_assessment.json  pyproject.toml  requirements.txt  run_streamlit.sh  setup.sh  streamlit_app.py  test.ipynb  test_api.sh  train_all_models.sh
context_engineering/: AI_AGENT_CONTEXT.md  IMPLEMENTATION_PLAN_NASA_POWER_GCP_PIPELINE.md  NASA_SPACE_APPS_2025_WILL_IT_RAIN_ON_MY_PARADE.md  NASA_SPACE_APPS_SUBMISSION_GUIDE.md
docs/: ARCHITECTURE.md  RUNBOOK.md  SETUP_GUIDE.md
examples/: activity_assessment_demo.py  simple_agent_demo.py
src/pixel_planet/: __init__.py  batch_forecast.py  batch_forecast_unified.py  build_manifest.py  config.py  fetch_power_api.py  load_to_bigquery.py  nasa_api.py  run_pipeline.py  run_pipeline_api.py  run_sts_transfer.py  spatial_utils.py  train_bqml_model.py  vertex_ai_agent.py  zarr_to_parquet.py
tests/: test_data_quality.py
