[project]
name = "pixel-planet-101"
version = "0.1.0"
description = "NASA Space Apps Challenge - Will It Rain On My Parade?"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pixel_planet"]

